--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -66,6 +66,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   <li><a href="/product/women">Women</a></li>
                   <li><a href="/product/sale">Sale</a></li>
                   <li><a href="/contact">Contact</a></li>
+                  <li><a href="/advancesearch">Advance Search</a></li>
                 </ul>
               </div>
               <!--/.navbar-collapse-->
