fix advance search

--- a/views/advancesearch.hbs
+++ b/views/advancesearch.hbs
@@ -9,7 +9,7 @@
                     <div class="col-md-12">
                         <h2>Name</h2>
                         <input name="name" id="name"type="text" placeholder="Name" onfocus="this.value = '';"
-                            onblur="if (this.value == '') {this.value = 'Name';}" />
+                            onblur="if (this.value == '') {this.value = '';}" />
                     </div>
                 </div>
                 <div class="radio-container">
@@ -18,28 +18,28 @@
                             <div class="categories-radio">
                                 <h2>Categories</h2>
                                 <select id="categories" >
-                                    <option value="all">All Acessories</option>
-                                    <option value="handbag">Handbag</option>
-                                    <option value="bracelet">Bracelet</option>
-                                    <option value="wristwatch">Wrist watch</option>
+                                    <option value="">All Acessories</option>
+                                    <option value="Handbag">Handbag</option>
+                                    <option value="Bracelet">Bracelet</option>
+                                    <option value="Wrist watch">Wrist watch</option>
                                 </select>
                             </div>
                             <div class="brand-radio">
                                 <h2>Brand</h2>
                                 <select id="brand" >
-                                    <option value="all">All Brands</option>
-                                    <option value="louisvuitton">Louis Vuitton</option>
-                                    <option value="rolex">Rolex</option>
-                                    <option value="chanel">Chanel</option>
-                                    <option value="gucci">Gucci</option>
-                                    <option value="omega">Omega</option>
-                                    <option value="hermes">Hermes</option>
-                                    <option value="dior">Dior</option>
-                                    <option value="prada">Prada</option>
-                                    <option value="ysl">YSL</option>
-                                    <option value="citizen">Citizen</option>
-                                    <option value="michaelkors">Michael Kors</option>
-                                    <option value="fendi">Fendi</option>
+                                    <option value="">All Brands</option>
+                                    <option value="Louis+Vuitton">Louis Vuitton</option>
+                                    <option value="Rolex">Rolex</option>
+                                    <option value="Chanel">Chanel</option>
+                                    <option value="Gucci">Gucci</option>
+                                    <option value="Omega">Omega</option>
+                                    <option value="Hermes">Hermes</option>
+                                    <option value="Dior">Dior</option>
+                                    <option value="Prada">Prada</option>
+                                    <option value="YSL">YSL</option>
+                                    <option value="Citizen">Citizen</option>
+                                    <option value="Michael+Kors">Michael Kors</option>
+                                    <option value="Fendi">Fendi</option>
                                 </select>
                             </div>
                             <div class="discount-radio">
